# ratemyneta

./: .gitignore  README.md  claude.md  codama.json  next.config.ts  package-lock.json  package.json  requirements.md
anchor/: Anchor.toml
anchor/programs/rate-my-politician/: Cargo.toml
anchor/programs/rate-my-politician/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx
app/(routes)/how-it-works/: page.tsx
app/(routes)/party/: page.tsx
app/(routes)/party/[id]/: page.tsx
app/(routes)/politician/[id]/: page.tsx
app/(routes)/politicians/: page.tsx
app/components/: cluster-select.tsx  grid-background.tsx  providers.tsx  theme-toggle.tsx  wallet-button.tsx
app/components/layout/: LanguageToggle.tsx  Navbar.tsx
app/components/leaderboard/: SortBar.tsx  StatsRow.tsx
app/components/party/: PartyRatingForm.tsx
app/components/politician/: JanamatPollList.tsx  PartyBadge.tsx  PoliticianCard.tsx  RatingForm.tsx  ScoreRing.tsx  TrendArrow.tsx
app/components/zk/: ZkModeToggle.tsx
app/data/: data.source.json  janamat-scores.json  parties.ts  politicians.ts  related-polls.json  scoring.ts
app/janamat/: client.ts  sentiment.ts
app/lib/: explorer.ts  solana-client.ts
app/lib/hooks/: use-party-ratings.ts  use-ratings.ts  use-zk-rating.ts
app/lib/wallet/: context.tsx  standard.ts  types.ts
app/lib/zk/: nullifier.ts
scripts/: init-parties.ts  init-politicians.ts  scrape-janamat.ts
types/: index.ts
