[package]
name = "rate-my-politician"
version = "0.1.0"
description = "Rate My Politician — civic accountability dApp for Nepal"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rate_my_politician"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
